# livros

./: .gitignore
langchain-na-pratica/: .gitignore  ebook.docx  ebook.md  gerar_ebook.py  pyproject.toml  sequence.txt
langchain-na-pratica/capitulo_01/: execucao_exercicio_1.sh  hello_langchain.py
langchain-na-pratica/capitulo_02/: generate_ssh_key.sh  setup_python_kali.sh  setup_zsh.sh
langchain-na-pratica/capitulo_03/: execucao_exercicio_3.sh  tradutor_dinamico.py
langchain-na-pratica/capitulo_04/: execucao_exercicio_4_0.sh  execucao_exercicio_4_1.sh  execucao_exercicio_4_2.sh  execucao_exercicio_4_3.sh  execucao_exercicio_4_4.sh  execucao_exercicio_4_5.sh  exercicio_01_lcel_basica.py  exercicio_02_lcel_passthrough.py  exercicio_03_lcel_paralela.py  exercicio_04_lcel_lambda.py  exercicio_05_lcel_streaming.py
langchain-na-pratica/capitulo_05/: agente_pesquisa.py  execucao_exercicio_5_1.sh
langchain-na-pratica/capitulo_06/: agente_analise_vendas_sql.py  agente_cotacao_moedas.py  execucao_exercicio_6_1.sh  execucao_exercicio_6_2.sh
langchain-na-pratica/capitulo_09/: assistente_viagem.py  execucao_exercicio_9_1.sh
langchain-na-pratica/capitulos/: agradecimentos.md  capitulo_1.md  capitulo_10.md  capitulo_2.md  capitulo_3.md  capitulo_4.md  capitulo_5.md  capitulo_6.md  capitulo_7.md  capitulo_8.md  capitulo_9.md  conclusao.md  glossario.md  inicio.md  introducao.md  proximos_passos.md  referencias.md  sobre_autor.md
langchain-na-pratica/exercicios_revisados/: exercicio_1.py  exercicio_10.py  exercicio_11.py  exercicio_2.py  exercicio_3.py  exercicio_4.py  exercicio_5.py  exercicio_6.py  exercicio_7.py  exercicio_8.py  exercicio_9.py  run_exercicio_1.bat  run_exercicio_1.sh
(+56 files in other folders)
