[project]
name = "exercicio-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
]
